--- a/Magento_Contact/templates/form.phtml
+++ b/Magento_Contact/templates/form.phtml
@@ -121,7 +121,7 @@ if ($recaptchaViewModel !== null && $recaptchaData = $recaptchaViewModel->getRec
             return {
                 errors: 0,
                 hasCaptchaToken: 0,
-                submitForm: function () {
+                submitForm() {
                     var $form = document.querySelector('#<?= $escaper->escapeJs($formId) ?>');
                     <?= $block->getChildHtml('recaptcha_validation'); ?>
 
