--- a/Magento_Customer/templates/form/resetforgottenpassword.phtml
+++ b/Magento_Customer/templates/form/resetforgottenpassword.phtml
@@ -73,7 +73,7 @@ use Magento\Framework\Escaper;
     function initForm() {
         return {
             passwordsMatching: true,
-            checkPasswordsMatch: function () {
+            checkPasswordsMatch() {
                 if (document.getElementById('password').value ===
                         document.getElementById('password-confirmation').value) {
                             this.passwordsMatching = true;
