--- a/Magento_Customer/templates/form/forgotpassword.phtml
+++ b/Magento_Customer/templates/form/forgotpassword.phtml
@@ -74,7 +74,7 @@ if ($recaptchaViewModel !== null && $recaptchaData = $recaptchaViewModel->getRec
                 return {
                     errors: 0,
                     hasCaptchaToken: 0,
-                    submitForm: function () {
+                    submitForm() {
                         var $form = document.querySelector('#<?= $escaper->escapeJs($formId) ?>');
                         <?= $block->getChildHtml('recaptcha_validation'); ?>
 
