#131 Reload sectionData after applying coupon code in cart

--- a/Magento_Checkout/templates/cart/js/cart.phtml
+++ b/Magento_Checkout/templates/cart/js/cart.phtml
@@ -155,6 +155,7 @@ $viewModelStore = $viewModels->require(\Hyva\Theme\ViewModel\Store::class);
                         document.getElementById('coupon_code').value = '';
                     }
                     $this.isLoading = false;
+                    $this.reloadCustomerData();
                 });
             },
             clearErrorMessages() {
