--- a/Magento_Bundle/templates/catalog/product/view/type/bundle/option/select.phtml
+++ b/Magento_Bundle/templates/catalog/product/view/type/bundle/option/select.phtml
@@ -38,7 +38,7 @@ $activeSelectOptions = [];
 <?php else: ?>
     <select id="bundle-option-<?= (int)$optionId ?>"
             name="bundle_option[<?= (int)$optionId ?>]"
-            class="form-select mb-4"
+            class="form-select max-w-full mb-4"
             form="product_addtocart_form"
             x-on:change="
                 activeSelectOptions['<?= (int)$optionId ?>'] = [$event.target.value];
