--- a/Magento_Bundle/templates/catalog/product/view/type/bundle/options.phtml
+++ b/Magento_Bundle/templates/catalog/product/view/type/bundle/options.phtml
@@ -31,7 +31,7 @@ $regularPrice = $priceInfo->getPrice(RegularPrice::PRICE_CODE)->getAmount()->get
 $finalPrice = $priceInfo->getPrice(BasePrice::PRICE_CODE)->getAmount()->getValue();
 ?>
 <?php if ($product->isSaleable()): ?>
-<div class="card flex w-full sm:w-1/2 lg:w-2/3">
+<div class="card flex w-full md:w-1/2 lg:w-2/3">
     <?php if (count($options)): ?>
         <script>
             function initBundleOptions() {
@@ -183,10 +183,12 @@ $finalPrice = $priceInfo->getPrice(BasePrice::PRICE_CODE)->getAmount()->getValue
                     dispatchOptionSelection();
                     $dispatch('set-selected-options', {});
                 })
-             ">
+             "
+             class="w-full"
+        >
 
-            <fieldset class="fieldset fieldset-bundle-options" form="product_addtocart_form">
-                <legend id="customizeTitle" class="legend mb-2">
+            <fieldset class="fieldset fieldset-bundle-options min-w-48 mb-8" form="product_addtocart_form">
+                <legend id="customizeTitle" class="legend">
                     <h3 class="text-gray-900 text-2xl title-font font-base text-center md:text-left w-full">
                         <?= $escaper->escapeHtml(__('Customize %1', $product->getName())) ?>
                     </h3>
@@ -208,8 +210,8 @@ $finalPrice = $priceInfo->getPrice(BasePrice::PRICE_CODE)->getAmount()->getValue
                         </div>
                     </div>
                 <?php endforeach; ?>
-                <?= $block->getChildHtml('product_info_bundle_options_bottom') ?>
             </fieldset>
+            <?= $block->getChildHtml('product_info_bundle_options_bottom') ?>
         </div>
     <?php else: ?>
         <p class="empty"><?= $escaper->escapeHtml(__('No options of this product are available.')) ?></p>
