--- a/Magento_Theme/templates/elements/slider.phtml
+++ b/Magento_Theme/templates/elements/slider.phtml
@@ -136,12 +136,84 @@ $graphqlQuery = $gqlViewModel->query("slider_products_query", $query ?: "
   }
 }", ['is_linked_product' => $isLinkedProduct, 'type' => $type]);
 
+$mergeAddToMethodsOnComponent = <<<EOJS
+            component.addToWishlist = function(productId) {
+                var postUrl = BASE_URL+"wishlist/index/add/";
+                fetch(postUrl, {
+                    "headers": {
+                        "content-type": "application/x-www-form-urlencoded; charset=UTF-8",
+                    },
+                    "body": "form_key="+ hyva.getFormKey() + "&product="+productId+"&uenc="+btoa(window.location.href),
+                    "method": "POST",
+                    "mode": "cors",
+                    "credentials": "include"
+                }).then(function (response) {
+                    if (response.redirected) {
+                        window.location.href = response.url;
+                    } else if (response.ok) {
+                        return response.json();
+                    } else {
+                        typeof window.dispatchMessages !== "undefined" && window.dispatchMessages(
+                            [{
+                                type: "warning",
+                                text: "{$escaper->escapeHtml(__('Could not add item to wishlist.'))}"
+                            }], 5000
+                        );
+                    }
+                }).then(function (response) {
+                    if(!response) { return }
+                    typeof window.dispatchMessages !== "undefined" && window.dispatchMessages(
+                        [{
+                            type: (response.success) ? "success" : "error",
+                            text: (response.success)
+                                ? "{$escaper->escapeHtml(__("%1 has been added to your Wish List.", __("Product")))}"
+                                : response.error_message
+                        }], 5000
+                    );
+                    var reloadCustomerDataEvent = new CustomEvent("reload-customer-section-data");
+                    window.dispatchEvent(reloadCustomerDataEvent);
+                }).catch(function (error) {
+                    typeof window.dispatchMessages !== "undefined" && window.dispatchMessages(
+                        [{
+                            type: "error",
+                            text: error
+                        }], 5000
+                    );
+                });
+            }
+            component.addToCompare = function(productId) {
+                const postUrl = BASE_URL + 'catalog/product_compare/add/';
+                fetch(postUrl, {
+                    "headers": {
+                        "content-type": "application/x-www-form-urlencoded; charset=UTF-8",
+                    },
+                    "body": "form_key="+ hyva.getFormKey() + "&product="+productId+"&uenc="+btoa(window.location.href),
+                    "method": "POST",
+                    "mode": "cors",
+                    "credentials": "include"
+                }).then(function (response) {
+                    if (response.redirected) {
+                        window.location.href = response.url;
+                    }
+                }).catch(function (error) {
+                    typeof window.dispatchMessages !== "undefined" && window.dispatchMessages(
+                        [{
+                            type: "error",
+                            text: error
+                        }], 5000
+                    );
+                });
+            };
+EOJS;
+
+
 $queryResponseDataCallback = ! $isLinkedProduct
     ? "
                             (data, component) => {
                                 component.currency = (data &&
                                     data.data &&
                                     data.data.currency);
+                                {$mergeAddToMethodsOnComponent}
                                 return data &&
                                     data.data &&
                                     data.data.products &&
@@ -152,6 +224,7 @@ $queryResponseDataCallback = ! $isLinkedProduct
                                 component.currency = (data &&
                                     data.data &&
                                     data.data.currency);
+                                {$mergeAddToMethodsOnComponent}
                                 return data &&
                                     data.data &&
                                     data.data.products &&
