--- a/Magento_Theme/templates/elements/slider.phtml
+++ b/Magento_Theme/templates/elements/slider.phtml
@@ -14,7 +14,6 @@ use Hyva\Theme\ViewModel\Cart\Items;
 use Hyva\Theme\ViewModel\Currency;
 use Hyva\Theme\ViewModel\HeroiconsOutline;
 use Hyva\Theme\ViewModel\ProductCompare;
-use Hyva\Theme\ViewModel\Slider;
 use Hyva\Theme\ViewModel\Store;
 use Hyva\Theme\ViewModel\Wishlist;
 use Magento\Framework\Escaper;
@@ -39,13 +38,12 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
 /** @var GraphqlViewModel $gqlViewModel */
 $gqlViewModel = $viewModels->require(GraphqlViewModel::class);
 
-/** @var Slider $sliderViewModel */
-$sliderViewModel = $viewModels->require(Slider::class);
-
 /** @var Currency $currencyViewModel */
 $currencyViewModel = $viewModels->require(Currency::class);
 $currencySymbol = $currencyViewModel->getCurrentCurrencySymbol();
 
+/** @var Escaper $escaper */
+/** @var Template $block */
 $uniqueId = '_' . uniqid();
 $query = $block->getGraphqlQuery();
 /**
@@ -62,9 +60,9 @@ $sortDirection = $block->getSortDirection() ?: 'ASC';
 $title = $block->getTitle();
 $type = $block->getType() ?: "";
 
-$isLinkedProduct = (in_array($type, ['related', 'crosssell', 'upsell']));
+$linkedProduct = (in_array($type, ['related', 'crosssell', 'upsell']));
 
-if ($isLinkedProduct) {
+if ($linkedProduct) {
     if ($type === 'crosssell') {
         /** @var Items $cartItemsViewModel */
         $cartItemsViewModel = $viewModels->require(Items::class);
@@ -112,7 +110,7 @@ $productAttributes = "
         }
       }";
 
-$items = $isLinkedProduct ?
+$items = $linkedProduct ?
     "{$type}_products {
         $productAttributes
     }" :
@@ -134,61 +132,74 @@ $graphqlQuery = $gqlViewModel->query("slider_products_query", $query ?: "
         $items
     }
   }
-}", ['is_linked_product' => $isLinkedProduct, 'type' => $type]);
-
-$queryResponseDataCallback = ! $isLinkedProduct
-    ? "
-        (data, component) => {
-            component.currency = (data &&
-                data.data &&
-                data.data.currency);
-            return data &&
-                data.data &&
-                data.data.products &&
-                data.data.products.items;
-        }"
-    : "
-        (data, component) => {
-            component.currency = (data &&
-                data.data &&
-                data.data.currency);
-            return data &&
-                data.data &&
-                data.data.products &&
-                data.data.products.items &&
-                data.data.products.items[0] &&
-                data.data.products.items[0]['{$escaper->escapeJs($type)}_products'] &&
-                // only use products with visibility set to `Catalog` or `Catalog, Search` (2 or 4)
-                // with status set to '1' (enabled)
-                data.data.products.items[0]['{$escaper->escapeJs($type)}_products']
-                    .filter(product => {
-                        return (
-                            [2,4].includes(product.visibility) &&
-                            product.status.toString() === '1'
-                        )
-                    }) || []
-
-        }";
-
-$sliderItemTemplate = 'Magento_Catalog::product/slider-item.phtml';
+}", ['is_linked_product' => $linkedProduct, 'type' => $type]);
 ?>
-
 <script>
-    'use strict';
-    (function( hyva, undefined ) {
-
-        hyva.slider = hyva.slider || {};
-
-        hyva.slider.addToWishlist = hyva.slider.addToWishlist ||
-            function(productId) {
-                var postUrl = BASE_URL + "wishlist/index/add/";
+    function initSliderComponent<?= /** @noEscape */$uniqueId ?>() {
+        return {
+            active: 0,
+            products: [],
+            currency: [],
+            loading: true,
+            minHeight() {
+                return 'min-height: ' + ((this.loading && '491px') || 0);
+            },
+            query: <?= /** @noEscape */ json_encode($graphqlQuery) ?>,
+            getProducts($nextTick) {
+                fetch('<?= $escaper->escapeUrl($block->getBaseUrl()) ?>graphql?query=' + encodeURIComponent(
+                    this.query
+                ), {
+                    method: 'GET',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Store': '<?= /* @noEscape */ $viewModelStore->getStoreCode() ?>'
+                    },
+                })
+                    .then((response) =>  response.json())
+                    .then((data) => {
+                            this.currency = (data &&
+                                data.data &&
+                                data.data.currency);
+                            <?php if ($linkedProduct): ?>
+                            return this.products = (
+                                data &&
+                                data.data &&
+                                data.data.products &&
+                                data.data.products.items &&
+                                data.data.products.items[0] &&
+                                data.data.products.items[0]['<?= $escaper->escapeHtml($type) ?>_products'] &&
+                                // only use products with visibility set to `Catalog` or `Catalog, Search` (2 or 4)
+                                // with status set to '1' (enabled)
+                                data.data.products.items[0]['<?= $escaper->escapeHtml($type) ?>_products']
+                                    .filter(product => {
+                                        return (
+                                            [2,4].includes(product.visibility) &&
+                                            product.status.toString() === '1'
+                                        )
+                                    })
+                            ) || [];
+                            <?php else: ?>
+                            return this.products = (
+                                data &&
+                                data.data &&
+                                data.data.products &&
+                                data.data.products.items
+                            ) || [];
+                            <?php endif; ?>
+                        }
+                    ).finally(() => {
+                    this.loading = false
+                    $nextTick(() => this.calcPageSize());
+                });
+            },
+            addToWishlist(productId) {
+                var formKey = document.querySelector('input[name=form_key]').value;
+                var postUrl = BASE_URL+"wishlist/index/add/";
                 fetch(postUrl, {
                     "headers": {
                         "content-type": "application/x-www-form-urlencoded; charset=UTF-8",
                     },
-                    "body": "form_key=" + hyva.getFormKey() +
-                        "&product=" + productId +
-                        "&uenc=" + btoa(window.location.href),
+                    "body": "form_key="+ formKey + "&product="+productId+"&uenc="+btoa(window.location.href),
                     "method": "POST",
                     "mode": "cors",
                     "credentials": "include"
@@ -206,17 +217,14 @@ $sliderItemTemplate = 'Magento_Catalog::product/slider-item.phtml';
                         );
                     }
                 }).then(function (response) {
-                    if (!response) {
-                        return
-                    }
+                    if(!response) { return }
                     typeof window.dispatchMessages !== "undefined" && window.dispatchMessages(
                         [{
                             type: (response.success) ? "success" : "error",
                             text: (response.success)
                                 ? "<?= $escaper->escapeHtml(
                                     __("%1 has been added to your Wish List.", __("Product"))
-                                ) ?>"
-                                : response.error_message
+                                ) ?>" : response.error_message
                         }], 5000
                     );
                     var reloadCustomerDataEvent = new CustomEvent("reload-customer-section-data");
@@ -229,18 +237,16 @@ $sliderItemTemplate = 'Magento_Catalog::product/slider-item.phtml';
                         }], 5000
                     );
                 });
-            }
-
-        hyva.slider.addToCompare = hyva.slider.addToCompare ||
-            function(productId) {
+            },
+            addToCompare(productId) {
+                const formKey = document.querySelector('input[name=form_key]').value;
                 const postUrl = BASE_URL + 'catalog/product_compare/add/';
+
                 fetch(postUrl, {
                     "headers": {
                         "content-type": "application/x-www-form-urlencoded; charset=UTF-8",
                     },
-                    "body": "form_key=" + hyva.getFormKey() +
-                        "&product=" + productId +
-                        "&uenc=" + btoa(window.location.href),
+                    "body": "form_key="+ formKey + "&product="+productId+"&uenc="+btoa(window.location.href),
                     "method": "POST",
                     "mode": "cors",
                     "credentials": "include"
@@ -256,13 +262,157 @@ $sliderItemTemplate = 'Magento_Catalog::product/slider-item.phtml';
                         }], 5000
                     );
                 });
+            },
+            getSlider() {
+                return this.$el.querySelector('.js_slides');
+            },
+            pageSize: 1,
+            pageFillers: 0,
+            calcPageSize() {
+                var slider = this.getSlider();
+                if (slider) {
+                    this.pageSize = Math.round(slider.clientWidth / slider.querySelector('.js_slide').clientWidth);
+                    this.pageFillers = (
+                        this.pageSize * Math.ceil(this.products.length / this.pageSize)
+                    ) - this.products.length;
+                }
+            },
+            calcActive(event) {
+                var slider = this.getSlider();
+                if (slider) {
+                    this.active = Math.ceil(
+                        Math.round(
+                            slider.scrollLeft / (slider.scrollWidth / this.products.length)
+                        ) / this.pageSize
+                    ) * this.pageSize;
+                }
             }
+        }
+    }
 
-    }( window.hyva = window.hyva || {} ));
 </script>
+<section class="my-12 text-gray-700 body-font"
+         x-data="initSliderComponent<?= /** @noEscape */ $uniqueId?>()"
+         x-init="getProducts($nextTick);"
+         :style="minHeight()"
+         @resize.window.debounce="calcPageSize(); $nextTick( function() { calcActive() })"
+>
+    <template x-if="products && products.length">
+        <div class="container relative px-5">
+            <?php if ($title): ?>
+                <div class="container flex flex-col items-center pt-6 pb-3 mx-auto mb-6 border-b-2
+                    border-gray-300 md:flex-row">
+                    <h3 class="text-2xl font-medium text-gray-900 title-font">
+                        <?= $escaper->escapeHtml($title); ?>
+                    </h3>
+                </div>
+            <?php endif; ?>
+            <div class="relative w-full overflow-x-hidden">
+                <div class="relative flex flex-nowrap w-full overflow-auto transition-all js_slides snap"
+                     @scroll.debounce="calcActive"
+                >
+                    <template x-for="product in products">
+                        <div class="flex-none w-full py-1 js_slide md:w-1/2 lg:w-1/3 xl:w-1/4">
+                            <div class="mx-1 card card-interactive">
+                                <a :href="'<?= $escaper->escapeUrl($block->getBaseUrl()) ?>' +
+                                    product.url_key + (product.url_suffix || '')"
+                                   class="relative flex items-center bg-white product photo product-item-photo"
+                                   style="padding-top:100%"
+                                   tabindex="-1">
+                                    <span class="absolute top-0 left-0 flex flex-wrap content-center w-full h-full p-2
+                                        overflow-hidden align-center hover:shadow-sm">
+                                        <img class="self-center w-full h-auto"
+                                             :src="product.small_image.url"
+                                             :alt="product.small_image.label"
+                                             loading="lazy"
+                                             width="500"
+                                             height="500"
+                                        />
+                                    </span>
+                                </a>
 
-<?= $sliderViewModel
-    ->getSliderForQuery($sliderItemTemplate, $graphqlQuery, $queryResponseDataCallback)
-    ->setTitle($title)
-    ->toHtml();
-?>
+                                <p class="flex items-center justify-center px-1 pt-3 text-primary">
+                                    <a class="truncate product-item-link"
+                                       :href="'<?= $escaper->escapeUrl($block->getBaseUrl()) ?>' +
+                                            product.url_key + (product.url_suffix || '')"
+                                    >
+                                        <span x-html="product.name"></span>
+                                    </a>
+                                </p>
+                                <p class="pt-1 text-lg text-center text-gray-900"
+                                   x-text="hyva.formatPrice(product.price_range.minimum_price.final_price.value)"></p>
+                                <p class="flex flex-wrap gap-2 inline p-3">
+                                    <a class="justify-center w-auto mr-auto btn btn-primary"
+                                       :href="'<?= $escaper->escapeUrl($block->getBaseUrl()) ?>' +
+                                            product.url_key + (product.url_suffix || '')">
+                                        <span class="inline"><?= $escaper->escapeHtml(__('View Product')) ?></span>
+                                    </a>
+                                    <span class="inline-flex gap-2">
+                                        <?php if ($compareViewModel->showInProductList()): ?>
+                                            <button @click.prevent="addToCompare(product.id)"
+                                                    aria-label="<?= $escaper->escapeHtmlAttr(__('Add to Compare')) ?>"
+                                                    class="rounded-full w-10 h-10 bg-gray-200 p-0 border-0 inline-flex
+                                                    items-center justify-center text-gray-500 hover:text-yellow-500"
+                                            >
+                                            <?= $heroicons->scaleHtml("w-5 h-5") ?>
+                                        </button>
+                                        <?php endif; ?>
+                                        <?php if ($wishlistViewModel->isEnabled()): ?>
+                                            <button
+                                                aria-label="<?= $escaper->escapeHtml(__('Add to Wish List')) ?>"
+                                                @click.prevent="addToWishlist(product.id)"
+                                                class="inline-flex items-center justify-center w-10 h-10 p-0 ml-auto
+                                            text-gray-500 bg-gray-200 border-0 rounded-full hover:text-red-600"
+                                            >
+                                            <?= $heroicons->heartHtml("w-5 h-5", 25, 25) ?>
+                                        </button>
+                                        <?php endif; ?>
+                                    </span>
+                                </p>
+                            </div>
+                        </div>
+                    </template>
+                    <div :class="{
+                        'js_dummy_slide w-full md:w-1/2 lg:w-1/3 xl:w-1/4 flex-none py-1' : pageFillers > 0
+                        }"></div>
+                    <div :class="{
+                        'js_dummy_slide w-full md:w-1/2 lg:w-1/3 xl:w-1/4 flex-none py-1' : pageFillers > 1
+                        }"></div>
+                    <div :class="{
+                        'js_dummy_slide w-full md:w-1/2 lg:w-1/3 xl:w-1/4 flex-none py-1' : pageFillers > 2
+                        }"></div>
+                </div>
+            </div>
+            <template x-if="products.length && products.length > pageSize">
+                <div class="flex items-center justify-center flex-1 p-4" x-cloak>
+                    <button
+                        aria-label="<?= $escaper->escapeHtml(__('Previous')) ?>"
+                        class="w-8 h-8 mx-4 text-black rounded-full outline-none focus:outline-none"
+                        :class="{ 'invisible' : active === 0 }"
+                        @click="getSlider().scrollLeft =
+                            (getSlider().scrollWidth / products.length) * (active-pageSize); active=active-pageSize;">
+                        <?= $heroicons->chevronLeftHtml("w-5 h-5", 25, 25) ?>
+                    </button>
+                    <template x-for="(product, index) in products" :key="index">
+                        <span class="flex-shrink-0 block w-3 h-3 mx-1 bg-black bg-opacity-25 rounded-full shadow cursor-pointer"
+                              :class="{
+                                    'bg-opacity-100': active === index,
+                                    'hidden': (pageSize !== 1 && !!(index % pageSize))
+                                    }"
+                              @click="getSlider().scrollLeft =
+                                    (getSlider().scrollWidth / products.length) * index; active=index;">
+                        </span>
+                    </template>
+                    <button
+                        aria-label="<?= $escaper->escapeHtml(__('Next')) ?>"
+                        class="w-8 h-8 mx-4 text-black rounded-full outline-none focus:outline-none"
+                        :class="{ 'invisible' : active >= products.length-pageSize }"
+                        @click="getSlider().scrollLeft =
+                            (getSlider().scrollWidth / products.length) * (active+pageSize); active=active+pageSize">
+                        <?= $heroicons->chevronRightHtml("w-5 h-5", 25, 25) ?>
+                    </button>
+                </div>
+            </template>
+        </div>
+    </template>
+</section>
