--- a/Magento_ConfigurableProduct/templates/product/view/type/options/js/configurable-options.phtml
+++ b/Magento_ConfigurableProduct/templates/product/view/type/options/js/configurable-options.phtml
@@ -20,6 +20,16 @@ use Magento\Framework\View\Element\Template;
             itemId: '<?= (int)$block->getRequest()->getParam('id') ?>',
             allowedAttributeOptions: [],
             selectedValues: [],
+            init() {
+                this.findAllowedAttributeOptions();
+                this.$nextTick(() => {
+                    if (typeof this.optionConfig.defaultValues === 'object') {
+                        for (const [optionId, value] of Object.entries(this.optionConfig.defaultValues)) {
+                            this.changeOption(optionId, value + '');
+                        }
+                    }
+                });
+            },
             findSimpleIndex () {
                 var productIndexes = this.optionConfig.index;
                 var $this = this;
