improve send friend: 1) multiple rows of friedns, 2) show product being shared, 3) compact form a bit

--- a/Magento_SendFriend/layout/sendfriend_product_send.xml
+++ b/Magento_SendFriend/layout/sendfriend_product_send.xml
@@ -17,6 +17,9 @@
         <referenceContainer name="content">
             <block class="Magento\SendFriend\Block\Send" name="sendfriend.send" cacheable="false" template="Magento_SendFriend::send.phtml">
                 <container name="form.additional.info" as="form_additional_info"/>
+                <block class="Hyva\Theme\Block\SendFriend\Product" name="product_item"
+                       template="Magento_SendFriend::item.phtml">
+                </block>
             </block>
         </referenceContainer>
     </body>
