#185: Fixes activeSelectOptions assignment on bundle radio option change binding
Additionally adds the same binding to the “None” radio option when the field is required.

--- a/Magento_Bundle/templates/catalog/product/view/type/bundle/option/radio.phtml
+++ b/Magento_Bundle/templates/catalog/product/view/type/bundle/option/radio.phtml
@@ -45,6 +45,10 @@ $activeSelectOptions = [];
                    class="radio product bundle option"
                    <?= ($default && $default->isSalable())?'':' checked="checked" ' ?>
                    value=""
+                   x-on:change="
+                        activeSelectOptions['<?= (int)$optionId ?>'] = [$event.target.value];
+                        $nextTick(() => {calculateTotalPrice()});
+                   "
             />
             <label class="label text-sm"
                    for="bundle-option-<?= (int)$optionId ?>">
@@ -72,7 +76,7 @@ $activeSelectOptions = [];
                    value="<?= (int)$selectionId ?>"
                    data-option-id="<?= $escaper->escapeHtmlAttr($optionSelectionId) ?>"
                    x-on:change="
-                        activeSelectOptions['<?= (int)$optionId ?>'] = $event.target.value;
+                        activeSelectOptions['<?= (int)$optionId ?>'] = [$event.target.value];
                         $nextTick(() => {calculateTotalPrice()});
                    "
             />
