--- a/Magento_Customer/templates/form/register.phtml
+++ b/Magento_Customer/templates/form/register.phtml
@@ -49,7 +49,7 @@ if ($recaptchaViewModel !== null && $recaptchaData = $recaptchaViewModel->getRec
         <?= $block->getBlockHtml($recaptchaInputFieldBlock) ?>
         <div class="md:grid grid-cols-2 gap-4">
             <fieldset class="my-8 card">
-                <legend>
+                <legend class="contents">
                     <span>
                         <?= $escaper->escapeHtml(__('Personal Information')) ?>
                     </span>
@@ -95,7 +95,7 @@ if ($recaptchaViewModel !== null && $recaptchaData = $recaptchaViewModel->getRec
                 <?= $block->getChildHtml('fieldset_create_info_additional') ?>
             </fieldset>
             <fieldset class="my-8 card">
-                <legend>
+                <legend class="contents">
                     <span>
                         <?= $escaper->escapeHtml(__('Sign-in Information')) ?></span>
                 </legend>
